style.css
/*==== Themes ====*/

body[data-theme="1"] {
  --app-main-hue: 160;

  --btn-background-saturation: 85%;
  --btn-background-hover-saturation: 90%;

  --btn-background-lightness: 80%;
  --btn-background-hover-lightness: 90%;

  --button-background-hue: 0;

  --btn-increase-hue: 120;
  --btn-decrease-hue: 0;
  --btn-min-hue: 15;
  --btn-max-hue: 140;
  --btn-reset-hue: 60;
  --btn-saved-hue: 280;
  --btn-clear-hue: 330;
  --btn-set-hue: 40;
}

body[data-theme="2"] {
  --app-main-hue: 180;

  --btn-background-saturation: 75%;
  --btn-background-hover-saturation: 90%;

  --btn-background-lightness: 75%;
  --btn-background-hover-lightness: 90%;

  --button-background-hue: var(--app-main-hue);

  --btn-increase-hue: var(--app-main-hue);
  --btn-decrease-hue: var(--app-main-hue);
  --btn-min-hue: var(--app-main-hue);
  --btn-max-hue: var(--app-main-hue);
  --btn-reset-hue: var(--app-main-hue);
  --btn-saved-hue: var(--app-main-hue);
  --btn-clear-hue: var(--app-main-hue);
  --btn-set-hue: var(--app-main-hue);
}

/*==== Typography ====*/

@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

@font-face {
  font-family: vazir;
  src: url(./font/Vazir-Bold-FD.ttf);
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  user-select: none;
}

html {
  font-family: "Roboto", sans-serif;
}

.title-container {
  margin-bottom: 4rem;
}

.title {
  font-size: 4.5rem;
  color: hsl(var(--app-main-hue), 80%, 90%);
}

.title-description {
  margin-top: 0.75em;
  font-size: 1.2rem;
  text-align: center;
  color: hsl(var(--app-main-hue), 80%, 90%, 0.5);
}

.form * {
  font: inherit;
}

.number {
  font-size: 100px;
  font-weight: bold;
  text-align: center;
  color: #eee;

  grid-area: number;
}

.number.starting {
  color: hsl(
    60,
    var(--btn-background-saturation),
    var(--btn-background-lightness)
  );
}
.number.max {
  color: hsl(
    120,
    var(--btn-background-saturation),
    var(--btn-background-lightness)
  );
}
.number.min {
  color: hsl(
    0,
    var(--btn-background-saturation),
    var(--btn-background-lightness)
  );
}
.number.saved {
  color: hsl(
    var(--btn-saved-hue),
    var(--btn-background-saturation),
    var(--btn-background-lightness)
  );
}
button {
  border: none;
  font-weight: 600;
  cursor: pointer;
  text-transform: uppercase;

  background-color: hsl(
    var(--btn-background-hue),
    var(--btn-background-saturation),
    var(--btn-background-lightness)
  );
  opacity: 0.7;
}

button:is(:hover, :focus) {
  background-color: hsl(
    var(--btn-background-hue),
    var(--btn-background-hover-saturation),
    var(--btn-background-hover-lightness)
  );
  outline: none;
  outline: 1px solid black;

  opacity: 1;
}

button:is(button, :hover) {
  transition: background-color 200ms ease-out;
}

.increase {
  --btn-background-hue: var(--btn-increase-hue);
  color: hsl(var(--btn-increase-hue), var(--btn-background-saturation), 18%);
  grid-area: increase;
}

.decrease {
  --btn-background-hue: var(--btn-decrease-hue);
  color: hsl(var(--btn-decrease-hue), var(--btn-background-saturation), 18%);
  grid-area: decrease;
}

.increase,
.decrease {
  font-size: 50px;

  border-radius: 50%;

  width: 100px;
  height: 100px;
  place-self: center;
}

button.deactive {
  opacity: 0.2;
  cursor: not-allowed;
}

button.deactive:is(:hover, :active) {
  background-color: hsl(
    var(--btn-background-hue),
    var(--btn-background-saturation),
    var(--btn-background-lightness)
  );
}

.button-action {
  font-size: 16px;
  padding: 0.25em 1em;
  border-radius: 0.75em;
}

.reset {
  --btn-background-hue: var(--btn-reset-hue);
  grid-area: reset;
}
button.min {
  --btn-background-hue: var(--btn-min-hue);
  grid-area: min;
}
button.max {
  --btn-background-hue: var(--btn-max-hue);
  grid-area: max;
}

.clear {
  --btn-background-hue: var(--btn-clear-hue);
  grid-area: clear;
}

button.saved {
  --btn-background-hue: var(--btn-saved-hue);
  grid-area: saved;
}

button.set {
  --btn-background-hue: var(--btn-set-hue);
  grid-area: set;
}

body {
  display: grid;
  justify-items: center;
  background-color: hsl(var(--app-main-hue), 50%, 25%);
}

.last-subject {
  padding: 0.5rem;
  width: 100%;
  justify-self: start;
  font-size: 1.5rem;
  margin-block: 2em 0.5em;
  border-radius: 0.5rem;
  font-family: sans-serif;
  background-color: hsl(var(--app-main-hue), 80%, 20%);
  color: hsl(var(--app-main-hue), 80%, 90%);

  grid-area: last-subject;
}

.last-subject-span,
.number-span {
  font-weight: 600;
  color: hsl(var(--app-main-hue), 39%, 61%);
}

.counter {
  width: 50%;
  min-width: 750px;
  display: grid;

  grid-template-columns: auto 3fr auto;
  grid-template-rows: auto 1fr;
  grid-template-areas:
    " decrease number increase "
    " min . max "
    " set . reset "
    "last-subject last-subject last-subject"
    " . clear . "
    " . saved . ";

  padding: 5em;
  margin-bottom: 2em;
  gap: 0.5rem 0;

  background-color: hsl(var(--app-main-hue), 80%, 10%);
  border-radius: 16px;
  place-items: center;
  box-shadow: hsl(100, 20%, 10%, 0.25) 0px 30px 60px -12px inset,
    rgb(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}

/* ===== styling Form ===== */

label {
  align-self: center;
  padding-right: 1rem;
  grid-area: label;
}

.form {
  width: 50%;
  min-width: 750px;
  font-size: 1.25rem;
  display: grid;
  grid-template-columns: auto 3fr auto;
  grid-template-areas: "label input submit";

  align-content: center;
}

.submit {
  grid-area: submit;
  --btn-background-hue: 20;
  padding: 0 1rem;
  border-radius: 0 10px 10px 0;
  text-transform: none;
}

.last-subject-input {
  grid-area: input;
  padding: 0.5rem;
}

.last-subject-input:focus {
  background-color: hsl(var(--app-main-hue), 30%, 86%);
}
/* Media query */
@media screen and (max-width: 768px) {
  /* remove the blue outline */
  .title-container {
    margin-bottom: 0;
    padding: 1em;
  }

  .title {
    font-size: 40px;
    color: hsl(var(--app-main-hue), 80%, 90%);
  }

  .title-description {
    font-size: 12px;
    text-align: center;
    color: hsl(var(--app-main-hue), 80%, 90%, 0.5);
  }
  .number {
    font-size: 100px;
    padding-block: 1em;
    place-self: center;
  }

  .last-subject {
    margin: unset;
    margin-top: 0.5em;
  }
  .counter {
    place-items: unset;
    padding: unset;
    grid-template-rows: unset;
    min-width: unset;
    box-shadow: none;

    background-color: hsl(var(--app-main-hue), 80%, 0%, 0.5);
    grid-auto-flow: row;
    grid-template-columns: repeat(4, 1fr);

    padding: 0.5rem;
    width: 100vw;
    max-width: 500px;
    margin: 0;
    grid-template-areas:
      "increase increase increase max"
      "number number number number"
      "decrease decrease decrease min"
      "reset set saved clear"
      "last-subject last-subject last-subject last-subject";
    border-radius: 0;

    justify-content: center;

    gap: 8px;
  }

  .increase,
  .decrease {
    font-size: 50px;

    border-radius: 0;
    margin-inline: 0;

    width: 100%;
    height: 75px;
    place-self: center;
  }

  button {
    border-radius: 0;
    opacity: 0.8;
  }

  .button-action {
    border-radius: 0;
    font-size: 16px;
  }

  .set,
  .reset,
  .clear,
  button.saved {
    height: 25px;
  }

  body {
    display: grid;
    justify-items: center;
    padding: 0;
    background-color: hsl(var(--app-main-hue), 50%, 25%);
  }

  .form {
    margin-top: 1em;
    width: 100vw;
    max-width: 500px;

    row-gap: 0.5em;

    grid-template-columns: unset;
    grid-template-areas:
      "label label label"
      "input input submit";

    align-content: center;
  }

  .submit {
    border-radius: 0 4px 4px 0;
  }
}

